<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_ic_back_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:text="@string/bookmark"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/iv_ic_back_grey"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_modification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="27dp"
        android:text="@string/modification"
        android:textColor="@color/rectangle1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="102dp"
        android:text="총 1개"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle1"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="150dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_ourtteokbokki"
        android:layout_width="306dp"
        android:layout_height="129dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="27dp"
        android:src="@drawable/img_food1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rectangle1" />

    <TextView
        android:id="@+id/tv_ourtteokbokki_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="5dp"
        android:text="@string/ourtteokbokki"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_ourtteokbokki" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="27dp"
        android:text="@string/ourtteokbokki_time"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_ourtteokbokki" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv_ourtteokbokki_name"
        app:layout_constraintTop_toBottomOf="@id/tv_ourtteokbokki_name">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:src="@drawable/img_star" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/ourtteokbokki_score"
            android:textColor="@color/score_grey"
            android:textSize="12sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>